# ai-agent-sugi

./: README.md  index.js  package.json  server.js  webpack.config.js
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: chat.py  excel.py  vba.py
backend/app/services/: excel_service.py  llm_service.py  vba_service.py
demo/: google-cloud-demo.html  voice-recognition.html
docs/: google-cloud-speech-to-text.md
electron-app/: README.md  build-windows.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
examples/: express-voice-server.js  google-cloud-example.js  run-google-cloud-example.sh  voice-recognition-node.js
examples/public/: index.html
frontend/: index.html  package-lock.json  package.json
src/mastra/: __init__.py  index.js  main.js
src/mastra/core/: __init__.py  agent.js  agent.py  index.js  memory.js  memory.py  tools.js  tools.py  workflow.js  workflow.py
src/mastra/evaluations/: index.js
src/mastra/integrations/: index.js
src/mastra/rag/: index.js
src/mastra/utils/: formatter.js  index.js
src/mastra/voice/: README.md  browser.js  enhancer.js  google-cloud.js  index.js
streamlit_app/: README.md  app.py  requirements.txt
streamlit_app/agents/: llm_agent.py
streamlit_app/services/: vba_generator.py
streamlit_app/utils/: excel_processor.py
